syntax = "proto2";

package amqp;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;

message FieldValuePair {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  optional string key = 1;
  optional FieldValue value = 2;
}

message Table {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  repeated FieldValuePair table = 1;
}

message FieldArray {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  repeated FieldValue value = 1;
}

message Decimal {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  optional uint32 scale = 1 [(gogoproto.casttype) = "uint8"];
  optional int32 value  = 2;
}

message FieldValue {
  option (gogoproto.goproto_unrecognized) = false;
  option (gogoproto.goproto_getters) = false;
  oneof value {
    bool v_boolean                   = 1;
    int32 v_int8                     = 2  [(gogoproto.casttype) = "int8"];
    uint32 v_uint8                   = 3  [(gogoproto.casttype) = "uint8"];
    int32 v_int16                    = 4  [(gogoproto.casttype) = "int16"];
    uint32 v_uint16                  = 5  [(gogoproto.casttype) = "uint16"];
    int32 v_int32                    = 6  ;
    uint32 v_uint32                  = 7  ;
    int64 v_int64                    = 8  ;
    uint64 v_uint64                  = 9  ;
    float v_float                    = 10 ;
    double v_double                  = 11 ;
    Decimal v_decimal                = 12 ;
    string v_shortstr                = 13 ; // < 256 bytes
    bytes v_longstr                  = 14 ;
    FieldArray v_array               = 15 ;
    uint64 v_timestamp               = 16 ;
    Table v_table                    = 17 ;
    bytes v_bytes                    = 18 ;
  }
}
